<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Payload_TYP" Id="{26f29132-e8e0-0cb6-1310-80d5aebe53cc}">
    <Declaration><![CDATA[TYPE Payload_TYP :
STRUCT
	Order_Num 	: INT;
	Red 		: INT;
	Orange		: INT;
	Pink 		: INT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>